[package]
name = "bt_bencode"
version = "0.5.1"
license = "MIT OR Apache-2.0"
authors = ["Bryant Luk <code@bryantluk.com>"]
edition = "2018"
description = "A Bencode encoding/decoding implementation."
repository = "https://github.com/bluk/bt_bencode"
readme = "README.md"
include = [
  "src/**/*.rs",
  "Cargo.toml",
  "README.md",
  "LICENSE-APACHE",
  "LICENSE-MIT",
]

[dependencies]
serde = {version = "1", default-features = false }
serde_bytes = { version = "0.11", default-features = false }
itoa = {version = "1.0.1", default-features = false }

[dev-dependencies]
serde_derive = "1"

[features]
default = ["std"]

std = ["serde/std", "serde_bytes/std"]

alloc = ["serde/alloc", "serde_bytes/alloc"]
