[package]
name = "bt_bencode"
version = "0.8.0"
license = "MIT OR Apache-2.0"
authors = ["Bryant Luk <code@bryantluk.com>"]
edition = "2018"
description = "A Bencode encoding/decoding implementation."
repository = "https://github.com/bluk/bt_bencode"
documentation = "https://docs.rs/bt_bencode/"
readme = "README.md"
include = [
  "src/**/*.rs",
  "Cargo.toml",
  "README.md",
  "LICENSE-APACHE",
  "LICENSE-MIT",
]
keywords = ["bencode", "bittorrent", "torrent", "serialization", "serde"]
categories = ["encoding", "no-std"]
rust-version = "1.36.0"

[dependencies]
serde = {version = "1", default-features = false }
itoa = {version = "1", default-features = false }

[dev-dependencies]
serde_derive = "1"
sha1 = "0.10.1"

[features]
default = ["std"]

std = ["serde/std"]

alloc = ["serde/alloc"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
